--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
             <div class="mb-3 mt-3">
           <select class="form-select-lg" id="fonts-select" aria-label="Default select example">
             <option selected> Wähle eine Schriftart</option>
-            <option value="1">sans-serif</option>
-            <option value="2">serif</option>
-            <option value="3">monospace</option>
+            <option value="Angelia">1</option>
+            <option value="Greatings">2</option>
+            <option value="Romance">3</option>
           </select>
         </div>
         </div>
