--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
         <script>
           document.write(new Date().getFullYear());
         </script>
-        , <img src="" alt="" width="30" height="24" />
+        ,
+        <img id="logo" src="./logo/EW1.png" alt="" width="60" height="" />
       </p>
     </footer>
     <script
