--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           document.write(new Date().getFullYear());
         </script>
         ,
-        <img id="logo" src="./logo/EW1.png" alt="" width="60" height="" />
+        <img id="logo" src="/logo/EW1.png" alt="" width="60" height="" />
       </p>
     </footer>
     <script
