--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <span class="choose" id="choose">Wähle eine Schriftart</span>
 
         <div class="dropdown">
-          <div class="select d-flex justify-content-end">
+          <div class="select">
             <span></span>
             <svg
               xmlns="http://www.w3.org/2000/svg"
