--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
             <li value="Angelia" id="Angelia">1. Schriftart</li>
             <li value="Greatings" id="Greatings">2. Schriftart</li>
             <li value="Romance" id="Romance">3. Schriftart</li>
+            <li value="Yoko" id="Yoko">Yoko</li>
           </ul>
         </div>
 
