--- a/index.html
+++ b/index.html
@@ -62,10 +62,14 @@
           </div>
           <input type="hidden" name="Schriftart" />
           <ul class="dropdown-menu">
-            <li value="Angelia" id="Angelia">1. Schriftart</li>
-            <li value="Greatings" id="Greatings">2. Schriftart</li>
-            <li value="Romance" id="Romance">3. Schriftart</li>
-            <li value="Yoko" id="Yoko">Yoko</li>
+            <li value="Schriftart1" id="Schriftart1">Schriftart 1</li>
+            <li value="Schriftart2" id="Schriftart2">Schriftart 2</li>
+            <li value="Schriftart3" id="Schriftart3">Schriftart 3</li>
+            <li value="Schriftart4" id="Schriftart4">Schriftart 4</li>
+            <li value="Schriftart5" id="Schriftart5">Schriftart 5</li>
+            <li value="Schriftart6" id="Schriftart6">Schriftart 6</li>
+            <li value="Schriftart7" id="Schriftart7">Schriftart 7</li>
+            <li value="Schriftart8" id="Schriftart8">Schriftart 8</li>
           </ul>
         </div>
 
