--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="container text-center mt-5">
         <div class="mb-3">
           <input
-            placeholder="..."
+            placeholder="Dein Wunschtext"
             type="text"
             class="form-control"
             id="input_text"
