--- a/index.html
+++ b/index.html
@@ -70,6 +70,14 @@
             <li value="Schriftart6" id="Schriftart6">Schriftart 6</li>
             <li value="Schriftart7" id="Schriftart7">Schriftart 7</li>
             <li value="Schriftart8" id="Schriftart8">Schriftart 8</li>
+            <li value="Schriftart9" id="Schriftart9">Schriftart 8</li>
+            <li value="Schriftart10" id="Schriftart10">Schriftart 8</li>
+            <li value="Schriftart11" id="Schriftart11">Schriftart 8</li>
+            <li value="Schriftart12" id="Schriftart12">Schriftart 8</li>
+            <li value="Schriftart13" id="Schriftart13">Schriftart 8</li>
+            <li value="Schriftart14" id="Schriftart14">Schriftart 8</li>
+            <li value="Schriftart15" id="Schriftart15">Schriftart 8</li>
+            <li value="Schriftart16" id="Schriftart16">Schriftart 8</li>
           </ul>
         </div>
 
