--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   </head>
   <body>
     <section>
+      <h1 class="text-center mt-4">Tattoo Folie</h1>
       <div class="container text-center mt-5">
         <div class="mb-3">
           <input
